--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@polymer/iron-media-query": "^3.0.0",
     "@polymer/iron-pages": "^3.0.0",
     "@polymer/iron-selector": "^3.0.0",
+    "@polymer/paper-button": "^3.0.1",
     "@polymer/paper-icon-button": "^3.0.0",
+    "@polymer/paper-input": "^3.2.1",
     "@polymer/polymer": "^3.0.0",
     "@webcomponents/webcomponentsjs": "^2.0.0"
   },
